@@ -10,3 +10,4 @@ SEXP Csparse_to_dense(SEXP x);
 SEXP Csparse_transpose(SEXP x);
 SEXP Csparse_validate(SEXP x);
 SEXP Csparse_vertcat(SEXP x, SEXP y);
+SEXP Csparse_band(SEXP x, SEXP k1, SEXP k2);
